# youtube-video-gpt

./: .gitignore  README.md  pyproject.toml
src/: app.py  chatbot.py  summarizer.py  transcriber.py
